--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.2.0",
+    "@nuxt/image": "^1.7.0",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0",
